--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,13 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@import url('https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400..900&family=Work+Sans:wght@100..900&display=swap');
+
+.font-playfair {
+  font-family: "Playfair Display", serif;
+}
+
+.font-work {
+  font-family: "Work Sans", sans-serif;
+}
